--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,9 +46,12 @@ services:
     depends_on:
       - backend
       - frontend
+
   certbot:
-    ports:
-      - "80:80"
+    build:
+      context: ./certbot
+      dockerfile: Dockerfile
+    command: /generate-certificate.sh
     env_file:
       - ./certbot/.env
     environment:
@@ -57,9 +60,8 @@ services:
     volumes:
       - ./nginx/letsencrypt:/etc/letsencrypt
       - ./nginx/webroot:/var/www/html
-    build:
-      context: ./certbot
-      dockerfile: Dockerfile
+    depends_on:
+      - nginx
 
 #  pgadmin:
 #    image: dpage/pgadmin4
