--- a/certbot/Dockerfile
+++ b/certbot/Dockerfile
@@ -4,7 +4,7 @@ FROM ubuntu:22.04
 RUN apt-get update && \
     apt-get install -y \
     certbot \
-    python3-certbot-nginx \  # Для интеграции с Nginx (опционально)
+    python3-certbot-nginx \
     && rm -rf /var/lib/apt/lists/*
 
 # Копируем скрипт и даем права на выполнение
