--- a/certbot/Dockerfile
+++ b/certbot/Dockerfile
@@ -7,9 +7,13 @@ RUN apt-get update && \
     python3-certbot-nginx \
     && rm -rf /var/lib/apt/lists/*
 
-# Копируем скрипт и даем права на выполнение
+# Копируем скрипты и даем права на выполнение
 COPY generate-certificate.sh /usr/local/bin/
+COPY update-certificate-links.sh /usr/local/bin/
+COPY fix-certificate-links.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/generate-certificate.sh
+RUN chmod +x /usr/local/bin/update-certificate-links.sh
+RUN chmod +x /usr/local/bin/fix-certificate-links.sh
 
 # Рабочая директория
 WORKDIR /certbot
