--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -80,6 +80,20 @@ server {
         return 301 https://tradesynergy.ru$request_uri;
     }
 
+    # WebSocket соединения
+    location ~ ^/api/.*/ws$ {
+        proxy_pass http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 86400;
+    }
+
     location ~ ^(/api|/admin) {
         proxy_pass http://backend;
 
