--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,26 +57,75 @@ jobs:
           [ -f "./frontend/.env" ] || cp ./frontend/.env.example ./frontend/.env
           
           # Основная команда деплоя (как вы делаете вручную)
-          echo "🚀 Starting deployment with nginx..."
-          if docker compose up -d --build nginx; then
-            # Проверка работы nginx
-            for i in {1..5}; do
+          echo "🚀 Starting deployment with all services..."
+          if docker compose up -d --build; then
+            echo "✅ All containers started successfully"
+            
+            # Проверка работы всех контейнеров
+            echo "🔍 Checking container health..."
+            
+            # Проверка nginx
+            for i in {1..10}; do
               if docker compose ps nginx | grep -q "Up"; then
                 echo "✅ Nginx is running"
                 break
               else
-                if [ $i -eq 5 ]; then
-                  echo "❌ Nginx failed to start after 5 attempts"
+                if [ $i -eq 10 ]; then
+                  echo "❌ Nginx failed to start after 10 attempts"
                   docker compose logs nginx
                   exit 1
                 fi
-                sleep 5
+                sleep 3
               fi
             done
+            
+            # Проверка backend
+            for i in {1..15}; do
+              if docker compose ps backend | grep -q "Up"; then
+                echo "✅ Backend is running"
+                # Дополнительная проверка что backend отвечает
+                if curl -f http://localhost:8000/health 2>/dev/null || curl -f http://localhost:8000/docs 2>/dev/null; then
+                  echo "✅ Backend is responding to requests"
+                  break
+                else
+                  if [ $i -eq 15 ]; then
+                    echo "❌ Backend is running but not responding to requests"
+                    docker compose logs backend
+                    exit 1
+                  fi
+                  sleep 3
+                fi
+              else
+                if [ $i -eq 15 ]; then
+                  echo "❌ Backend failed to start after 15 attempts"
+                  docker compose logs backend
+                  exit 1
+                fi
+                sleep 3
+              fi
+            done
+            
+            # Проверка frontend
+            for i in {1..10}; do
+              if docker compose ps frontend | grep -q "Up"; then
+                echo "✅ Frontend is running"
+                break
+              else
+                if [ $i -eq 10 ]; then
+                  echo "❌ Frontend failed to start after 10 attempts"
+                  docker compose logs frontend
+                  exit 1
+                fi
+                sleep 3
+              fi
+            done
+            
+            echo "🎉 All containers are healthy and running!"
+            
           else
             echo "❌ Deployment failed! Rolling back..."
             git reset --hard $current_commit
-            docker compose up -d nginx
+            docker compose up -d
             exit 1
           fi
           EOF
