--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -110,6 +110,14 @@ server {
         sub_filter 'http://tradesynergy.ru' 'https://tradesynergy.ru';
     }
 
+    # Nuxt Icon запросы (должны идти на frontend, а не на backend)
+    location ~ ^/_nuxt_icon/ {
+        proxy_pass http://frontend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
     # Статика Nuxt.js
     location ~ ^/(_nuxt|_ipx) {
         proxy_pass http://frontend;
