--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -118,6 +118,14 @@ server {
         proxy_redirect off;
     }
 
+    # Nuxt Icon запросы через API (тоже должны идти на frontend)
+    location ~ ^/api/_nuxt_icon/ {
+        proxy_pass http://frontend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
     # Статика Nuxt.js
     location ~ ^/(_nuxt|_ipx) {
         proxy_pass http://frontend;
