Fix: Update nginx config to properly handle /api/_nuxt_icon/ requests

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -94,7 +94,8 @@ server {
         proxy_read_timeout 86400;
     }
 
-    location ~ ^(/api|/admin) {
+    # API (исключая _nuxt_icon)
+    location ~ ^/api/(?!_nuxt_icon/).*$ {
         proxy_pass http://backend;
 
         # Важные заголовки для HTTPS
@@ -108,6 +109,16 @@ server {
         sub_filter_once off;
         sub_filter_types *;
         sub_filter 'http://tradesynergy.ru' 'https://tradesynergy.ru';
+    }
+
+    # Админка
+    location ~ ^/admin {
+        proxy_pass http://backend;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
     }
 
     # Nuxt Icon запросы (должны идти на frontend, а не на backend)
