--- a/nginx/nginx.local.conf
+++ b/nginx/nginx.local.conf
@@ -6,79 +6,34 @@ upstream frontend {
     server frontend:3000;
 }
 
+# HTTP сервер (редирект на HTTPS)
 server {
     listen 80;
-    server_name tradesynergy.ru www.tradesynergy.ru;
-    client_max_body_size 1000M;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    # Handle ACME Challenge first
-    location /.well-known/acme-challenge/ {
-        root /var/www/html;
-        try_files $uri =404;
-    }
-
-    # Redirect all other HTTP traffic to HTTPS
-    location / {
-        return 301 https://$server_name$request_uri;
-    }
+    server_name localhost;
+    return 301 https://$server_name$request_uri;
 }
 
+# HTTPS сервер
 server {
-    listen 443 ssl;
-    server_name www.tradesynergy.ru;
-    client_max_body_size 1000M;
-
-    # Разрешить доступ к ACME Challenge для Certbot
-    location /.well-known/acme-challenge/ {
-        root /var/www/html;
-        try_files $uri =404;
-    }
-
-    # Пути к сертификатам (Certbot автоматически обновит их)
-    ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    return 301 https://tradesynergy.ru;
-}
-
-# HTTPS-сервер (основной)
-server {
-    listen 443 ssl;
-    server_name tradesynergy.ru www.tradesynergy.ru;
-
-    # Разрешить доступ к ACME Challenge для Certbot
-    location /.well-known/acme-challenge/ {
-        root /var/www/html;
-        try_files $uri =404;
-    }
-
-    # Пути к сертификатам (Certbot автоматически обновит их)
-    ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
-
-    # Настройки SSL
+    listen 443 ssl http2;
+    server_name localhost;
+    
+    # SSL сертификаты
+    ssl_certificate /etc/nginx/letsencrypt/live/localhost/fullchain.pem;
+    ssl_certificate_key /etc/nginx/letsencrypt/live/localhost/privkey.pem;
+    
+    # SSL настройки
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
-
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
     client_max_body_size 1000M;
+
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
     gzip on;
     gzip_comp_level 4;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    # Редирект с www на основной домен (уже на HTTPS)
-    if ($host = www.tradesynergy.ru) {
-        return 301 https://tradesynergy.ru$request_uri;
-    }
 
     # WebSocket соединения
     location ~ ^/api/.*/ws$ {
@@ -107,18 +62,11 @@ server {
     # API (исключая _nuxt_icon)
     location ~ ^/api/(?!_nuxt_icon/).*$ {
         proxy_pass http://backend;
-
-        # Важные заголовки для HTTPS
-        proxy_set_header X-Forwarded-Proto $scheme;  # Передаем протокол (https)
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
-
-        # Автоматически заменяем http:// на https:// в ответах бэкенда
-        proxy_redirect http:// https://;
-
-        # Дополнительно: заменяем HTTP-ссылки в HTML/JS/CSS
-        sub_filter_once off;
-        sub_filter_types *;
-        sub_filter 'http://tradesynergy.ru' 'https://tradesynergy.ru';
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
     }
 
     # Админка
@@ -155,12 +103,23 @@ server {
         proxy_redirect off;
     }
 
+    # Обработка неправильных путей Nuxt в dev режиме
+    location ~ ^/_nuxt/.*/node_modules/ {
+        # Извлекаем правильный путь из неправильного
+        rewrite ^/_nuxt/.*/node_modules/(.*)$ /_nuxt/$1 break;
+        proxy_pass http://frontend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    # Загрузки
     location /uploads {
         alias /app/uploads;
     }
 
+    # Основной фронтенд
     location / {
-        # Обработка фронтенда (Nuxt.js)
         proxy_pass http://frontend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
