--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@pinia/nuxt": "0.11.1",
     "@prisma/client": "^6.8.1",
     "@unhead/vue": "^2.0.8",
+    "docx": "^9.5.1",
     "nuxt": "^3.12.2",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.2.0",
