--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "docx": "^9.5.1",
     "html2canvas-pro": "^1.5.11",
     "jspdf": "^3.0.3",
+    "number-to-words-ru": "^2.4.1",
     "nuxt": "^3.12.2",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.2.0",
