--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,6 +24,9 @@ COPY app_logging/ ./app_logging/
 COPY alembic.ini ./alembic.ini
 COPY alembic ./alembic
 
+# Создаем директорию static
+RUN mkdir -p ./app/static
+
 
 # Второй этап - итоговый образ
 FROM python:3.12-slim
