--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,75 @@ postgres-data/
 # SSL сертификаты для разработки (не должны попадать в git)
 nginx/letsencrypt/live/tradesynergy.ru/
 nginx/letsencrypt/live/localhost/
+
+# Кэш база данных
+cache/
+cache/*
+
+# Backend файлы окружения и кэш
+backend/.env
+backend/__pycache__/
+backend/alembic/__pycache__/
+backend/alembic/versions/__pycache__/
+backend/app/__pycache__/
+backend/app/admin/__pycache__/
+backend/app/api/__pycache__/
+backend/app/api/admin/__pycache__/
+backend/app/api/authentication/__pycache__/
+backend/app/api/authentication/models/__pycache__/
+backend/app/api/authentication/repositories/__pycache__/
+backend/app/api/authentication/schemas/__pycache__/
+backend/app/api/authentication/services/__pycache__/
+backend/app/api/chats/__pycache__/
+backend/app/api/chats/models/__pycache__/
+backend/app/api/chats/repositories/__pycache__/
+backend/app/api/chats/schemas/__pycache__/
+backend/app/api/chats/services/__pycache__/
+backend/app/api/common/__pycache__/
+backend/app/api/common/models/__pycache__/
+backend/app/api/common/repositories/__pycache__/
+backend/app/api/common/routes/__pycache__/
+backend/app/api/common/routes/location_tree.py.disabled
+backend/app/api/common/schemas/__pycache__/
+backend/app/api/common/services/__pycache__/
+backend/app/api/common/utils/__pycache__/
+backend/app/api/companies/__pycache__/
+backend/app/api/companies/repositories/__pycache__/
+backend/app/api/companies/schemas/__pycache__/
+backend/app/api/company/__pycache__/
+backend/app/api/company/models/__pycache__/
+backend/app/api/company/repositories/__pycache__/
+backend/app/api/company/schemas/__pycache__/
+backend/app/api/company/services/__pycache__/
+backend/app/api/messages/models/__pycache__/
+backend/app/api/products/__pycache__/
+backend/app/api/products/models/__pycache__/
+backend/app/api/products/repositories/__pycache__/
+backend/app/api/products/schemas/__pycache__/
+backend/app/api/products/services/__pycache__/
+backend/app/api/purchases/__pycache__/
+backend/app/api/purchases/models/__pycache__/
+backend/app/api/purchases/repositories/__pycache__/
+backend/app/api/purchases/schemas/__pycache__/
+backend/app/api/purchases/services/__pycache__/
+backend/app/api/v1/__pycache__/
+backend/app/core/__pycache__/
+backend/app/db/__pycache__/
+backend/app/schemas/__pycache__/
+backend/app_logging/__pycache__/
+backend/logging/
+
+# Данные городов
+data_cities/complete_cities_db_final.sql
+
+# Frontend временные файлы
+frontend/stores/purchases.ts.temp
+
+# Логи
+logs/backend/app_2025-10-22.log
+logs/backend/app_2025-10-23.log
+
+# SSL сертификаты и ключи
+nginx/letsencrypt/csr/
+nginx/letsencrypt/keys/
+nginx/letsencrypt/renewal/
