--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,8 @@ asyncpg = "^0.30.0"
 psycopg2 = "^2.9.10"
 websockets = "^13.0"
 pika = "^1.3.2"
+celery = "^5.4.0"
+kombu = "^5.4.0"
 
 
 [build-system]
