--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
       DEV_REDIRECT_URL: "http://frontend:3000"
       BACKEND_CORS_ORIGINS: '["https://tradesynergy.ru","https://www.tradesynergy.ru","http://tradesynergy.ru","http://www.tradesynergy.ru","http://localhost:3000","http://127.0.0.1:3000","http://0.0.0.0:3000","http://localhost:8000","http://127.0.0.1:8000","http://localhost","http://127.0.0.1","http://frontend:3000"]'
+      CELERY_BROKER_URL: "amqp://admin:admin123@rabbitmq:5672//"
+      CELERY_RESULT_BACKEND: "rpc://"
     volumes:
       - ./logs/backend:/app/logging
       - ./backend/cache:/app/cache
@@ -18,6 +20,8 @@ services:
       - ./backend/app/static:/app/app/static
     depends_on:
       db:
+        condition: service_healthy
+      rabbitmq:
         condition: service_healthy
 
   frontend:
@@ -50,6 +54,45 @@ services:
     depends_on:
       - backend
       - frontend
+
+  celery-worker:
+    build: ./backend
+    restart: unless-stopped
+    env_file:
+      - ./backend/.env
+    environment:
+      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
+      CELERY_BROKER_URL: "amqp://admin:admin123@rabbitmq:5672//"
+      CELERY_RESULT_BACKEND: "rpc://"
+    volumes:
+      - ./logs/backend:/app/logging
+      - ./backend/cache:/app/cache
+      - ./backend/uploads:/app/uploads
+    command: ["poetry", "run", "celery", "-A", "app.celery_app", "worker", "--loglevel=info"]
+    depends_on:
+      db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
+  celery-beat:
+    build: ./backend
+    restart: unless-stopped
+    env_file:
+      - ./backend/.env
+    environment:
+      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
+      CELERY_BROKER_URL: "amqp://admin:admin123@rabbitmq:5672//"
+      CELERY_RESULT_BACKEND: "rpc://"
+    volumes:
+      - ./logs/backend:/app/logging
+      - ./backend/cache:/app/cache
+    command: ["poetry", "run", "celery", "-A", "app.celery_app", "beat", "--loglevel=info"]
+    depends_on:
+      db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
 
   certbot:
     build:
@@ -97,3 +140,24 @@ services:
       retries: 5
     volumes:
       - ./postgres-data:/var/lib/postgresql/data:cached
+
+volumes:
+  rabbitmq_data:
+
+  rabbitmq:
+    image: rabbitmq:3.13-management-alpine
+    restart: unless-stopped
+    environment:
+      RABBITMQ_DEFAULT_USER: "admin"
+      RABBITMQ_DEFAULT_PASS: "admin123"
+      RABBITMQ_DEFAULT_VHOST: "/"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
