--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,18 @@
 services:
+  migrations:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.migrations
+    env_file:
+      - ./backend/.env
+    environment:
+      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
+    depends_on:
+      db:
+        condition: service_healthy
+    profiles:
+      - migrations
+
   db:
     image: postgres:17-alpine
     restart: unless-stopped
