--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -108,6 +108,8 @@ services:
       - frontend_node_modules:/app/node_modules
       # Кэшируем npm кэш для jiti и других инструментов
       - frontend_npm_cache:/app/node_modules/.cache
+      # Кэшируем .nuxt директорию для быстрой пересборки
+      - frontend_nuxt_cache:/app/.nuxt
     command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
     depends_on:
       - backend
@@ -178,6 +180,7 @@ services:
 volumes:
   frontend_node_modules:
   frontend_npm_cache:
+  frontend_nuxt_cache:
   backend_poetry_cache:
   backend_venv:
   rabbitmq_data_dev:
