--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -85,7 +85,7 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 ;sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/postgres
-sqlalchemy.url = postgresql://postgres:postgres@db:5432/postgres
+sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/buisnes_kufar
 
 
 [post_write_hooks]
