--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,7 +16,8 @@ aiosqlite = "^0.21.0"
 httpx = "^0.28.1"
 python-jose = {extras = ["cryptography"], version = "^3.5.0"}
 passlib = "^1.7.4"
-bcrypt = "^4.0.1"
+argon2-cffi = "^25.1.0"
+bcrypt = "^3.2.2"
 python-multipart = "^0.0.20"
 pydantic = {extras = ["email"], version = "^2.11.5"}
 fastapi-mail = "^1.5.0"
