редактирование профиля компании, изменил связь с городами

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     env_file:
       - ./backend/.env
     environment:
-      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
+      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/buisnes_kufar"
     depends_on:
       db:
         condition: service_healthy
@@ -36,7 +36,7 @@ services:
     env_file:
       - ./backend/.env
     environment:
-      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
+      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/buisnes_kufar"
       DEV_REDIRECT_URL: "http://frontend:3000"
       BACKEND_CORS_ORIGINS: '["https://tradesynergy.ru","https://www.tradesynergy.ru","http://tradesynergy.ru","http://www.tradesynergy.ru","http://localhost:3000","http://127.0.0.1:3000","http://0.0.0.0:3000","http://localhost:8000","http://127.0.0.1:8000","http://localhost","http://127.0.0.1","http://frontend:3000"]'
       CELERY_BROKER_URL: "amqp://admin:admin123@rabbitmq:5672//"
@@ -90,7 +90,7 @@ services:
     env_file:
       - ./backend/.env
     environment:
-      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
+      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/buisnes_kufar"
       CELERY_BROKER_URL: "amqp://admin:admin123@rabbitmq:5672//"
       CELERY_RESULT_BACKEND: "rpc://"
     volumes:
@@ -110,7 +110,7 @@ services:
     env_file:
       - ./backend/.env
     environment:
-      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
+      SQLALCHEMY_DATABASE_URL: "postgresql://postgres:postgres@db/buisnes_kufar"
       CELERY_BROKER_URL: "amqp://admin:admin123@rabbitmq:5672//"
       CELERY_RESULT_BACKEND: "rpc://"
     volumes:
@@ -156,14 +156,14 @@ services:
     environment:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgres"
-      POSTGRES_DB: "postgres"
+      POSTGRES_DB: "buisnes_kufar"
     command: >
       -c shared_buffers=512MB
       -c max_connections=200
       -c idle_in_transaction_session_timeout=10s
       -c tcp_keepalives_idle=60
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres -d postgres" ]
+      test: [ "CMD-SHELL", "pg_isready -U postgres -d buisnes_kufar" ]
       interval: 5s
       timeout: 5s
       retries: 5
