--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,6 +34,11 @@ kombu = "^5.4.0"
 redis = "^5.2.0"
 
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["."]
+asyncio_mode = "auto"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
