--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,43 @@ upstream frontend {
     server frontend:3000;
 }
 
+# Development server block for localhost testing
+server {
+    listen 80;
+    server_name localhost 127.0.0.1;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    client_max_body_size 1000M;
+
+    # API routing
+    location /api {
+        proxy_pass http://backend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # Admin panel
+    location /admin {
+        proxy_pass http://backend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    # Frontend
+    location / {
+        proxy_pass http://frontend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+}
+
+# Production server block
 server {
     listen 80;
     server_name tradesynergy.ru www.tradesynergy.ru;
