--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["dmiv <dmitriy40647274@gmail.com>"]
 readme = "README.md"
-
+package-mode = false
 [tool.poetry.dependencies]
 python = ">=3.12,<4.0"
 fastapi = "^0.115.12"
