Исправлено: dev-конфиг и редактор документов
- Убраны из git локальные секреты (.env) и TLS ключи/сертификаты; обновлены .env.example, .gitignore, dev compose/nginx
- Исправлена работа редактора: A4-пагинация без поломки фокуса/ввода, корректный layout/page, поиск и кнопки добавления товара/сохранения
- Миграции сделаны идемпотентными; упрощены проверки пароля для dev-логина

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,24 @@ REDIS_PORT=6379
 SECRET_KEY=your-secret-key-here-change-in-production
 
 # Frontend URL
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3001
+
+# Dev порты (используются в docker-compose.dev.yml через подстановку)
+DEV_BACKEND_PORT=8002
+DEV_FRONTEND_PORT=3001
+# 80 часто занят другими проектами — по умолчанию поднимаем nginx на 8080
+DEV_NGINX_PORT=8080
+
+# Frontend API config
+# Рекомендовано в dev: работать через /api (прокси в Nuxt / nginx), чтобы не было CORS
+VITE_PUBLIC_API_URL=/api
+# Для SSR внутри docker используем прямой доступ к backend по сервису
+API_BASE_URL=http://backend:8000/api
+# Dev proxy target для Nuxt (vite proxy). В docker: http://backend:8000, на хосте: http://localhost:8002
+NUXT_DEV_API_PROXY_TARGET=http://backend:8000
 
 # CORS Origins
-BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
+BACKEND_CORS_ORIGINS=["http://localhost:3001","http://127.0.0.1:3001","http://localhost:8080","http://127.0.0.1:8080","http://localhost","http://127.0.0.1"]
 
 # API Key for location service
 LOCATION_API_KEY=
