--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ cache/*
 
 # Backend файлы окружения и кэш
 backend/.env
+/.env
+/.env.*
+!/.env.example
 backend/__pycache__/
 backend/alembic/__pycache__/
 backend/alembic/versions/__pycache__/
