--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -71,7 +71,8 @@ services:
       # Все конфиги (DB/CORS/Celery/Keys) берём из корневого .env через env_file
     restart: unless-stopped
     ports:
-      - "${DEV_BACKEND_PORT:-8002}:8000"
+      # 3000/8000 заняты — используем 3010/8010 для теста ветки features
+      - "${DEV_BACKEND_PORT:-8010}:8000"
     volumes:
       # Пробрасываем весь код backend для hot reload
       - ./backend:/app:cached
@@ -100,7 +101,7 @@ services:
       NODE_ENV: "${NODE_ENV:-development}"
     restart: unless-stopped
     ports:
-      - "${DEV_FRONTEND_PORT:-3001}:3000"
+      - "${DEV_FRONTEND_PORT:-3010}:3000"
     volumes:
       # Пробрасываем весь код frontend для hot reload
       - ./frontend:/app:cached
