--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -71,8 +71,8 @@ services:
       # Все конфиги (DB/CORS/Celery/Keys) берём из корневого .env через env_file
     restart: unless-stopped
     ports:
-      # 3000/8000 заняты — используем 3010/8010 для теста ветки features
-      - "${DEV_BACKEND_PORT:-8010}:8000"
+      # 3000/8000 заняты — используем 3012/8012 для теста ветки features
+      - "${DEV_BACKEND_PORT:-8012}:8000"
     volumes:
       # Пробрасываем весь код backend для hot reload
       - ./backend:/app:cached
@@ -83,7 +83,7 @@ services:
       # Пробрасываем логи и кэш для разработки
       - ./logs:/app/logs:cached
       - ./cache:/app/cache:cached
-    command: ["poetry", "run", "uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
+    command: ["sh", "-c", "sleep 5 && poetry run uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"]
     depends_on:
       db:
         condition: service_healthy
@@ -101,7 +101,7 @@ services:
       NODE_ENV: "${NODE_ENV:-development}"
     restart: unless-stopped
     ports:
-      - "${DEV_FRONTEND_PORT:-3010}:3000"
+      - "${DEV_FRONTEND_PORT:-3012}:3000"
     volumes:
       # Пробрасываем весь код frontend для hot reload
       - ./frontend:/app:cached
