--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -35,8 +35,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-    expose:
-      - "5432"
+    ports:
+      - "5432:5432"
     volumes:
       - ./postgres-data-dev:/var/lib/postgresql/data:cached
 
