--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,10 @@ LOCATION_API_KEY=
 # reCAPTCHA
 RECAPTCHA_SECRET_KEY=6LdJHHorAAAAAEUE2R1s_QsmJPLR0PSCPnB1_TQy
 RECAPTCHA_SITE_KEY=6LdJHHorAAAAAG2JB9CyOtRQbPJWrxbdRPy0dMHO
+
+# S3 / MinIO (документы). При docker-compose.dev: http://minio:9000
+S3_ENDPOINT_URL=http://minio:9000
+S3_ACCESS_KEY=admin
+S3_SECRET_KEY=SuperSecret123!
+S3_BUCKET=documents
+S3_REGION=us-east-1
