add: document page
- изменен внешний вид всего компонента
- добавлена функциональность загрузки/удалени/загрузки собственного документа в minio
- добавлено отдельное API для работы с документами documents.ts
- добавлена логика скачивания документов, созданных в редакторе документов(по логике скачивания документа в редакторе в формате docx)

--- a/.gitignore
+++ b/.gitignore
@@ -20939,3 +20939,5 @@ nginx/letsencrypt/renewal/
 /backend/celery_worker.log
 /backend/new_venv/lib64/
 /backend/new_venv/
+.vscode/settings.json
+frontend/TODO
