--- a/.env.example
+++ b/.env.example
@@ -35,8 +35,10 @@ LOCATION_API_KEY=
 RECAPTCHA_SECRET_KEY=6LdJHHorAAAAAEUE2R1s_QsmJPLR0PSCPnB1_TQy
 RECAPTCHA_SITE_KEY=6LdJHHorAAAAAG2JB9CyOtRQbPJWrxbdRPy0dMHO
 
-# S3 / MinIO (документы). При docker-compose.dev: http://minio:9000
+# S3 / MinIO (документы). При docker-compose.dev: http://minio:9000 (внутренний адрес)
 S3_ENDPOINT_URL=http://minio:9000
+# Для presigned URL (скачивание в браузере): адрес, доступный с хоста
+S3_PUBLIC_ENDPOINT_URL=http://localhost:9000
 S3_ACCESS_KEY=admin
 S3_SECRET_KEY=SuperSecret123!
 S3_BUCKET=documents
