--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,7 +28,7 @@ RECAPTCHA_SECRET_KEY=6LdJHHorAAAAAEUE2R1s_QsmJPLR0PSCPnB1_TQy
 RECAPTCHA_SITE_KEY=6LdJHHorAAAAAG2JB9CyOtRQbPJWrxbdRPy0dMHO
 
 # - MinIO: self-hosted, e.g. http://localhost:9000
-S3_ENDPOINT_URL=http://localhost:9000
+S3_ENDPOINT_URL=http://host.docker.internal:9000
 S3_ACCESS_KEY=admin
 S3_SECRET_KEY=SuperSecret123!
 S3_BUCKET=documents
